--- a/guick-core/src/main/resources/stage/frontend/app/index.html.vm
+++ b/guick-core/src/main/resources/stage/frontend/app/index.html.vm
@@ -202,6 +202,7 @@
 <script src="layout/prototipo/book.controller.js"></script>
 <script src="layout/js/booklet.js"></script>
 <script src="layout/prototipo/slick.controller.js"></script>
+<script src="layout/prototipo/misc.controller.js"></script>
 
 <!-- commons:controllers -->
 <script src="common/controllers/controllers.module.js"></script>
